--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <header class="jumbotron">
         <div class="container">
-            <div class="row" class="row row-header">
+            <div class="row row-header">
                 <div class="col-12 col-sm-6">
                     <h1>Ristorante con Fusion</h1>
                     <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our lipsmacking creations will tickle your culinary senses!</p>
@@ -29,7 +29,7 @@
     </header>
 
     <div  class="container">
-        <div class="row"  class="row row-content  align-items-center">
+        <div class="row row-content  align-items-center">
             <div class="col-12 col-sm-4 order-sm-last col-md-3">
                 <h3>Our Lipsmacking Culinary Creations</h3>
             </div>
@@ -40,7 +40,7 @@
         </div>
 
 
-        <div class="row" class="row row-content  align-items-center">
+        <div class="row row-content  align-items-center">
             <div  class="col-12 col-sm-4 col-md-3">
                 <h3>This Month's Promotions</h3>
             </div>
@@ -50,7 +50,7 @@
             </div>
         </div>
 
-        <div class="row" class="row row-content  align-items-center">
+        <div class="row row-content  align-items-center">
             <div  class="col-12 col-sm-4 order-sm-last col-md-3">
                 <h3>Meet our Culinary Specialists</h3>
             </div>
