--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
                 </div>
                 <div class="col-12 col-sm align-self-center">
                     <a role="button" class="btn btn-block nav-link btn-warning"
-                        data-toggle="tooltip" data-html="true"  title="Or Call us at  <br><strong>+852 12345678</strong>"
-                        data-placement="bottom" href="#reserveform">Reserve Table</a>
+                        data-toggle="modal" data-target="#reserveform"
+                        data-placement="bottom">Reserve Table</a>
                 </div>
             </div>
         </div>
@@ -85,6 +85,78 @@
                         <div class="form-row">
                             <button type="button" class="btn btn-secondary btn-sm ml-auto" data-dismiss="modal">Cancel</button>
                             <button type="submit" class="btn btn-primary btn-sm ml-1">Sign in</button>        
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div id="reserveform" class="modal fade" role="dialog">
+        <div class="modal-dialog modal-lg" role="content">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title">Reserve a Table </h4>
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                </div>
+                <div class="modal-body">
+                    <form>
+                        <div class="form-group row">
+                            <label for="numofguests" class="col-12 col-sm-2 col-form-label">Number of Guests</label>
+                            <div class="col-10 col-sm-8">
+                                <div class="form-check form-check-inline">
+                                    <input type="radio" id="1" class="form-check-input" name="numofguests" value="1">
+                                    <label for="1" class="col-form-label radio-inline">1</label>
+                                </div>
+                                <div class="form-check form-check-inline">
+                                    <input type="radio" id="2" class="form-check-input" name="numofguests" value="2">
+                                    <label for="2" class="col-form-label radio-inline">2</label>
+                                </div>
+                                <div class="form-check form-check-inline">
+                                    <input type="radio" id="3" class="form-check-input" name="numofguests" value="3">
+                                    <label for="3" class="col-form-label radio-inline">3</label>
+                                </div>
+                                <div class="form-check form-check-inline">
+                                    <input type="radio" id="4" class="form-check-input" name="numofguests" value="4">
+                                    <label for="4" class="col-form-label radio-inline">4</label>
+                                </div>
+                                <div class="form-check form-check-inline">
+                                    <input type="radio" id="5" class="form-check-input" name="numofguests" value="5">
+                                    <label for="5" class="col-form-label radio-inline">5</label>
+                                </div>
+                                <div class="form-check form-check-inline">
+                                    <input type="radio" id="6" class="form-check-input" name="numofguests" value="6">
+                                    <label for="6" class="col-form-label radio-inline">6</label>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <label for="section" class="col-sm-2 col-form-label">Section</label>
+                            <div class="col-10 col-sm-8">
+                                <div class="btn-group btn-group-toggle" data-toggle="buttons">
+                                    <label class="btn btn-success active" for="non-smoking" class="col-form-label radio-inline">
+                                        <input type="radio" name="selection" id="nonsmoking" data-target="nonsmoking" autocomplete="off" value="non-smoking" checked>Non-smoking
+                                    </label>
+                                    <label class="btn btn-danger" for="smoking" class="col-form-label radio-inline">
+                                        <input type="radio" name="selection" id="smoking" data-target="nonsmoking" autocomplete="off" value="smoking">Smoking
+                                    </label>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <label for="dateandtime" class="col-sm-2 col-form-label">Date and Time</label>
+                            <div class="col-xs-12 col-sm-4">
+                                <input type="text" class="form-control" id="date" name="date" placeholder="Date">
+                            </div>
+                            <div class="col-xs-12 col-sm-4 offset-sm-1">
+                                <input type="text" class="form-control" id="time" name="time" placeholder="Time">
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <div class="offset-sm-2 col-sm-10">
+                                <button type="submit" class="btn btn-secondary">Cancel</button>
+                                <button type="submit" class="btn btn-primary">Reserve</button>
+                            </div>
                         </div>
                     </form>
                 </div>
@@ -202,61 +274,6 @@
                 </div>
             </div>
         </div>
-        <div class="row row-content" id="reserveform">
-            <div class="col-sm-8 offset-sm-2">
-                <div class="card">
-                    <h3 class="card-header bg-warning text-white">Reserve a Table</h3>
-                    <div class="card-body">
-                        <form>
-                            <div class="form-group row">
-                                <label for="numofguests" class="col-12 col-sm-2 col-form-label">Number of Guests</label>
-                                <div class="col-10 col-sm-8">
-                                    <div class="form-check form-check-inline">
-                                        <input type="radio" id="1" class="form-check-input" name="numofguests" value="1">
-                                        <label for="1" class="col-form-label radio-inline">1</label>
-                                    </div>
-                                    <div class="form-check form-check-inline">
-                                        <input type="radio" id="2" class="form-check-input" name="numofguests" value="2">
-                                        <label for="2" class="col-form-label radio-inline">2</label>
-                                    </div>
-                                    <div class="form-check form-check-inline">
-                                        <input type="radio" id="3" class="form-check-input" name="numofguests" value="3">
-                                        <label for="3" class="col-form-label radio-inline">3</label>
-                                    </div>
-                                    <div class="form-check form-check-inline">
-                                        <input type="radio" id="4" class="form-check-input" name="numofguests" value="4">
-                                        <label for="4" class="col-form-label radio-inline">4</label>
-                                    </div>
-                                    <div class="form-check form-check-inline">
-                                        <input type="radio" id="5" class="form-check-input" name="numofguests" value="5">
-                                        <label for="5" class="col-form-label radio-inline">5</label>
-                                    </div>
-                                    <div class="form-check form-check-inline">
-                                        <input type="radio" id="6" class="form-check-input" name="numofguests" value="6">
-                                        <label for="6" class="col-form-label radio-inline">6</label>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="form-group row">
-                                <label for="dateandtime" class="col-sm-2 col-form-label">Date and Time</label>
-                                <div class="col-xs-12 col-sm-4">
-                                    <input type="text" class="form-control" id="date" name="date" placeholder="Date">
-                                </div>
-                                <div class="col-xs-12 col-sm-4 offset-sm-1">
-                                    <input type="text" class="form-control" id="time" name="time" placeholder="Time">
-                                </div>
-                            </div>
-                            <div class="form-group row">
-                                <div class="offset-sm-2 col-sm-10">
-                                    <button type="submit" class="btn btn-primary">Reserve</button>
-                                </div>
-                            </div>
-                        </form>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
 
     <footer  class="footer">
         <div class="container">
@@ -304,11 +321,6 @@
     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script>
-        $(document).ready(function(){
-            $('[data-toggle="tooltip"]').tooltip();
-        });
-    </script>
 </body>
 
 </html>
