--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <li class="nav-item"><a class="nav-link" href="./contactus.html"><span class="fa fa-address-card fa-lg"></span> Contact</a></li>
                 </ul>
                 <span class="navbar-text">
-                    <a data-toggle="modal" data-target="#loginModal">
+                    <a class="btn btn-sm" id="loginButton">
                     <span class="fa fa-sign-in"></span> Login</a>
                 </span>  
             </div>          
@@ -47,9 +47,7 @@
                     <img src="img/logo.png" class="img-fluid">
                 </div>
                 <div class="col-12 col-sm align-self-center">
-                    <a role="button" class="btn btn-block nav-link btn-warning"
-                        data-toggle="modal" data-target="#reserveform"
-                        data-placement="bottom">Reserve Table</a>
+                    <a id="reserveButton" class="btn btn-block btn-warning">Reserve Table</a>
                 </div>
             </div>
         </div>
@@ -92,7 +90,7 @@
         </div>
     </div>
 
-    <div id="reserveform" class="modal fade" role="dialog">
+    <div id="reserveForm" class="modal fade" role="dialog">
         <div class="modal-dialog modal-lg" role="content">
             <div class="modal-content">
                 <div class="modal-header">
@@ -339,6 +337,14 @@
                     $("#carouselButton").children("span").removeClass('fa-play');
                     $("#carouselButton").children("span").addClass('fa-pause');                    
                 }
+            });
+
+            $("#loginButton").click(function(){
+                $("#loginModal").modal();
+            });
+
+            $("#reserveButton").click(function(){
+                $("#reserveForm").modal();
             });
         });
     </script>
